test/scc/stmt/semantic-errors/019.t
void test()
{
    struct { int x; } a;
    while(a) ;
}